Fix overflowing photos

--- a/themes/default/styles/fotoboek.css
+++ b/themes/default/styles/fotoboek.css
@@ -48,6 +48,11 @@ table.navigation td:nth-child(3) {
 	height: auto;
 }
 
+#photo .full-size-photo > img {
+	max-width: 100%;
+	height: auto;
+}
+
 #photo .full-size-photo .high-quality {
 	position: absolute;
 	top: 0;
